BUGFIX: Fixes #7003
Changed the calculation of the iframe size so it would be the correct
height. Altered the styles of the view details area to match design.
Changed the background color of the title on the file header so it
wouldn't look editable (as recommended by Felipe)

--- a/admin/scss/ie7.scss
+++ b/admin/scss/ie7.scss
@@ -27,6 +27,24 @@ html {
 	}
 }
 
+.ss-uploadfield-edit-iframe{
+	.field {
+		&.treedropdown{
+			height:150px !important;				
+		}
+		.TreeDropdownField {
+			ul{
+				min-height:100px;
+				height:auto;
+				max-height:150px;
+			}
+		}
+	}
+}
+
+
+
+
 //fix for add one button not positioning properly
 
 .ss-ui-button.cms-page-add-button {
